Add NFT ownership information to Kanley Stubrick's profiles

--- a/character-detail-kanley.html
+++ b/character-detail-kanley.html
@@ -92,6 +92,7 @@
                             <li>Participates in <strong>Creative Queries</strong> to test teaser trailers and get audience reactions</li>
                             <li>Rarely engages with community voting or reviews — prefers to lead rather than vote</li>
                             <li>Known for <strong>skipping 2FA and Plaid ID</strong>, valuing speed over formality</li>
+                            <li>Holds a <strong>valuable NFT</strong> representing early platform participation and moderator status</li>
                         </ul>
                         
                         <h5 class="mt-4 mb-3">Behavior Notes</h5>
@@ -119,6 +120,7 @@
                                 <p><strong>External Balance:</strong> <span class="text-primary">684.61</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">740.49</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-warning">40.4</span></p>
+                                <p><strong>NFT:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i> (Moderator Status NFT)</p>
                             </div>
                         </div>
                     </div>
@@ -135,6 +137,7 @@
                                 <p><strong>External Balance Target:</strong> <span class="text-primary">684.61</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">740.49</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-warning">40.4</span></p>
+                                <p><strong>NFT Target:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i> (To be transferred to Base layer)</p>
                                 <p><strong>Moderator Privileges:</strong> <span class="text-success">Must be preserved</span></p>
                             </div>
                         </div>
@@ -169,25 +172,30 @@
                                     <tr>
                                         <td>3. User Authentication</td>
                                         <td>Test login with Google Auth</td>
-                                        <td><span class="badge bg-success">Completed</span></td>
+                                        <td><span class="badge bg-secondary">Not Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>4. Token Transfer</td>
                                         <td>Verify TALNT token balance on Base L3</td>
-                                        <td><span class="badge bg-success">Completed</span></td>
+                                        <td><span class="badge bg-secondary">Not Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>5. Moderator Permissions</td>
                                         <td>Test moderation features access</td>
-                                        <td><span class="badge bg-success">Completed</span></td>
+                                        <td><span class="badge bg-secondary">Not Completed</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>6. NFT Transfer</td>
+                                        <td>Verify NFT ownership on Base layer</td>
+                                        <td><span class="badge bg-secondary">Not Completed</span></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                         
-                        <div class="alert alert-success mt-3">
-                            <i class="bi bi-check-circle me-2"></i>
-                            <strong>Verification Complete:</strong> All migration steps have been successfully completed for Kanley Stubrick. Account fully migrated to Base L3.
+                        <div class="alert alert-warning mt-3">
+                            <i class="bi bi-exclamation-triangle me-2"></i>
+                            <strong>Verification In Progress:</strong> Data snapshot and smart contract assignment completed, but user authentication, token transfer, moderator permissions, and NFT transfer still need verification.
                         </div>
                     </div>
                 </div>
