--- a/characters.html
+++ b/characters.html
@@ -72,12 +72,13 @@
                                 <p><strong>Internal Balance:</strong> 684.61</p>
                                 <p><strong>External Balance:</strong> 55.88</p>
                                 <p><strong>Reputation:</strong> 40.4</p>
+                                <p><strong>NFT:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i></p>
                             </div>
                         </div>
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            <strong>The Visionary Founder:</strong> A filmmaker & early submitter who regularly submits film proposals using FILMCredits and participates in Creative Queries. With high internal wallet balance and reputation, likely a founding participant who uses DCP as a platform to launch projects quickly.
+                            <strong>The Visionary Founder:</strong> A filmmaker & early submitter who regularly submits film proposals using FILMCredits and participates in Creative Queries. With high internal wallet balance, reputation, and a valuable NFT, likely a founding participant who uses DCP as a platform to launch projects quickly.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
