Add specific NFT name 'Focus Puller - Jack of Spades - Deck 80 - #4454' to Kanley Stubrick's profile

--- a/character-detail-kanley.html
+++ b/character-detail-kanley.html
@@ -92,7 +92,7 @@
                             <li>Participates in <strong>Creative Queries</strong> to test teaser trailers and get audience reactions</li>
                             <li>Rarely engages with community voting or reviews — prefers to lead rather than vote</li>
                             <li>Known for <strong>skipping 2FA and Plaid ID</strong>, valuing speed over formality</li>
-                            <li>Holds a <strong>valuable NFT</strong> representing early platform participation and moderator status</li>
+                            <li>Holds a <strong>valuable NFT</strong> ("Focus Puller - Jack of Spades - Deck 80 - #4454") representing early platform participation and moderator status</li>
                         </ul>
                         
                         <h5 class="mt-4 mb-3">Behavior Notes</h5>
@@ -120,7 +120,7 @@
                                 <p><strong>External Balance:</strong> <span class="text-primary">684.61</span></p>
                                 <p><strong>Total Balance:</strong> <span class="text-danger">740.49</span></p>
                                 <p><strong>Reputation Score:</strong> <span class="text-warning">40.4</span></p>
-                                <p><strong>NFT:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i> (Moderator Status NFT)</p>
+                                <p><strong>NFT:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i> ("Focus Puller - Jack of Spades - Deck 80 - #4454")</p>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 <p><strong>External Balance Target:</strong> <span class="text-primary">684.61</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">740.49</span></p>
                                 <p><strong>Reputation Target:</strong> <span class="text-warning">40.4</span></p>
-                                <p><strong>NFT Target:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i> (To be transferred to Base layer)</p>
+                                <p><strong>NFT Target:</strong> <span class="text-success">1</span> <i class="bi bi-image text-success"></i> ("Focus Puller - Jack of Spades - Deck 80 - #4454" to be transferred to Base layer)</p>
                                 <p><strong>Moderator Privileges:</strong> <span class="text-success">Must be preserved</span></p>
                             </div>
                         </div>
