--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
                                 <br>
                                 <small class="d-block mt-2">Verification performed using the <code>getBalance(address)(uint256)</code>, <code>getLockedBalance(address)(uint256)</code>, and <code>getUserReputation(address)(uint256)</code> functions</small>
                                 <small class="d-block mt-2">External Balance data retrieved using <code>getUserExternalBalance(string)(uint256)</code> function from BAILEE_CUTOVER_EXTERNAL_BALANCE contract at <code>0xE4D297078f8678b6C9c746A3485409F2c011c156</code></small>
+                                <small class="d-block mt-2">NFT verification performed using <code>cast call 0xdC3E83b88762B6FF14f4a938052652FDCa8eBeB0 "getUserNftIds(string)(uint256[])" "tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33" --rpc-url "https://api.developer.coinbase.com/rpc/v1/base-sepolia/Ohv86XN7C0pATtzGc2f5LMmFNO1PUi33"</code></small>
                             </div>
                         </div>
                     </div>
