--- a/character-detail-kanley.html
+++ b/character-detail-kanley.html
@@ -24,9 +24,6 @@
                         <a class="nav-link" href="index.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="setup-guide.html">Setup Guide</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="characters.html">Characters</a>
                     </li>
                 </ul>
@@ -210,5 +207,15 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Check for authentication
+        document.addEventListener('DOMContentLoaded', function() {
+            // Check if user is authenticated
+            if (localStorage.getItem('dcp_authenticated') !== 'true') {
+                // If not authenticated, redirect to main page
+                window.location.href = 'index.html';
+            }
+        });
+    </script>
 </body>
 </html> 
