--- a/character-detail-twitter.html
+++ b/character-detail-twitter.html
@@ -189,5 +189,15 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Check for authentication
+        document.addEventListener('DOMContentLoaded', function() {
+            // Check if user is authenticated
+            if (localStorage.getItem('dcp_authenticated') !== 'true') {
+                // If not authenticated, redirect to main page
+                window.location.href = 'index.html';
+            }
+        });
+    </script>
 </body>
 </html> 
