--- a/characters.html
+++ b/characters.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -157,7 +157,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            <strong>The Contrarian Reviewer:</strong> A community reviewer who leaves detailed critiques on projects. Rarely submits work, focuses on evaluating others' films. Has 2FA enabled but failed Plaid verification. His zero reputation suggests he's often out of sync with winning picks—rating unconventionally.
+                            <strong>The Contrarian Reviewer:</strong> A community reviewer who leaves detailed critiques on projects. Rarely submits work, focuses on evaluating others' films. Has 2FA enabled but failed Plaid verification. His zero reputation suggests he's often out of sync with winning picksâ€”rating unconventionally.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -364,7 +364,7 @@
 
     <footer class="bg-light text-center text-lg-start">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2025 DCP Migration Testing Dashboard
+            Â© 2025 DCP Migration Testing Dashboard
         </div>
     </footer>
 
@@ -418,3 +418,4 @@
     </script>
 </body>
 </html> 
+
