Remove Setup Guide link from characters.html navigation

--- a/characters.html
+++ b/characters.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,9 +66,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Dashboard</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="setup-guide.html">Setup Guide</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link active" href="characters.html">Characters</a>
                     </li>
@@ -157,7 +155,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            <strong>The Contrarian Reviewer:</strong> A community reviewer who leaves detailed critiques on projects. Rarely submits work, focuses on evaluating others' films. Has 2FA enabled but failed Plaid verification. His zero reputation suggests he's often out of sync with winning picksâ€”rating unconventionally.
+                            <strong>The Contrarian Reviewer:</strong> A community reviewer who leaves detailed critiques on projects. Rarely submits work, focuses on evaluating others' films. Has 2FA enabled but failed Plaid verification. His zero reputation suggests he's often out of sync with winning picks—rating unconventionally.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -364,7 +362,7 @@
 
     <footer class="bg-light text-center text-lg-start">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-            Â© 2025 DCP Migration Testing Dashboard
+            © 2025 DCP Migration Testing Dashboard
         </div>
     </footer>
 
@@ -418,4 +416,5 @@
     </script>
 </body>
 </html> 
+
 
