--- a/characters.html
+++ b/characters.html
@@ -140,7 +140,7 @@
                             <div class="col-md-4 text-center mb-3 mb-md-0">
                                 <img src="herner.webp" alt="Herner Werzog" class="img-fluid rounded-circle mb-2" style="width: 130px; height: 130px; object-fit: cover;">
                                 <div>
-                                    <span class="badge bg-danger">Verification Failed</span>
+                                    <span class="badge bg-warning text-dark">Submitter</span>
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -155,7 +155,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            <strong>The Contrarian Reviewer:</strong> A community reviewer who leaves detailed critiques on projects. Rarely submits work, focuses on evaluating others' films. Has 2FA enabled but failed Plaid verification. His zero reputation suggests he's often out of sync with winning picks—rating unconventionally.
+                            <strong>The Content Submitter:</strong> A testing user who creates proposals and content for moderation. Since moderators cannot moderate their own proposals, Herner serves the essential function of submitting content that can be reviewed by moderators like Kanley Stubrick, enabling thorough testing of moderation workflows.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -266,9 +266,9 @@
                                     </tr>
                                     <tr>
                                         <td><strong>Herner Werzog</strong></td>
-                                        <td>Reviewer / Critic</td>
-                                        <td>Reviews projects, stakes tokens, flags issues</td>
-                                        <td>Influence outcomes, surface outliers</td>
+                                        <td>Submitter</td>
+                                        <td>Creates content for moderation, submits proposals</td>
+                                        <td>Test moderation workflows, provide content to moderate</td>
                                     </tr>
                                     <tr>
                                         <td><strong>TwitterProd</strong></td>
@@ -332,7 +332,7 @@
                                         <td><code>tz2HYEvNZ8yhzfCdExtcCkrgwCzSwS9mQDSN</code></td>
                                         <td><em>To be assigned</em></td>
                                         <td>7.04</td>
-                                        <td>2FA enabled, ID verification failed</td>
+                                        <td>2FA enabled, content submitter for moderation testing</td>
                                     </tr>
                                     <tr>
                                         <td>TwitterProd</td>
