--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 
         <section id="test-accounts" class="mb-5">
             <div class="card">
+                <div class="card-header bg-light">
+                    <h3 class="h5 mb-0">DCP users pre-migration status</h3>
+                </div>
                 <div class="card-body p-0">
                     <div class="table-responsive">
                         <table class="table table-hover mb-0">
@@ -150,11 +153,11 @@
                                 <tr>
                                     <th>Account Name</th>
                                     <th>Tezos Address</th>
-                                    <th>Base Appchain Address</th>
                                     <th>Authentication</th>
                                     <th>Wallet Balance</th>
                                     <th>App Balance</th>
                                     <th>Reputation</th>
+                                    <th>Moderator</th>
                                     <th>NFT</th>
                                     <th>Verification</th>
                                 </tr>
@@ -163,44 +166,44 @@
                                 <tr id="account-kanley">
                                     <td>Kanley Stubrick</td>
                                     <td><span class="text-monospace small">tz2XTbJRMrCCY4cNH9ji3DT2nVuFXm6YmP33</span></td>
-                                    <td><span class="text-monospace small">0x476bB9fADF338B7cB58D9775ab6E635faA042B47</span></td>
-                                    <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning text-dark">Moderator</span></td>
+                                    <td><span class="badge bg-info">Google Auth</span></td>
                                     <td>55.88</td>
                                     <td>684.61</td>
                                     <td>40.4</td>
+                                    <td><span class="text-success">Yes</span></td>
                                     <td>1</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
                                 <tr id="account-herner">
                                     <td>Herner werzog</td>
                                     <td><span class="text-monospace small">tz2HYEvNZ8yhzfCdExtcCkrgwCzSwS9mQDSN</span></td>
-                                    <td><span class="text-monospace small">0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
                                     <td>0.98</td>
                                     <td>6.06</td>
                                     <td>0</td>
+                                    <td><span class="text-danger">No</span></td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
                                 <tr id="account-twitter">
                                     <td>TwitterProd</td>
                                     <td><span class="text-monospace small">tz2GYLLxLJQyceXu1aqVALbpxKjfKf4q9Zog</span></td>
-                                    <td><span class="text-monospace small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
                                     <td>1.37</td>
                                     <td>1</td>
                                     <td>0</td>
+                                    <td><span class="text-danger">No</span></td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
                                 <tr id="account-keith">
                                     <td>Keith Fellini</td>
                                     <td><span class="text-monospace small">tz1VX9pnQepjrza4vVpyE9ddM8cJJL4iAWq9</span></td>
-                                    <td><span class="text-monospace small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
                                     <td>3080.69</td>
                                     <td>194.9</td>
                                     <td>0</td>
+                                    <td><span class="text-danger">No</span></td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
