Fix column headers in EVM Ledger Contract Verification table

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                                     <thead class="table-light">
                                         <tr>
                                             <th>User</th>
+                                            <th>Assigned EVM address</th>
                                             <th>Contract Balance</th>
                                             <th>External Balance</th>
                                             <th>Contract Reputation</th>
