Remove Migration Code Repository reference from dashboard

--- a/index.html
+++ b/index.html
@@ -134,9 +134,7 @@
         <section id="dashboard" class="mb-5">
             <div class="row">
                 <div class="col-12">
-                    <div class="alert alert-info">
-                        <strong>Migration Code Repository:</strong> <a href="https://github.com/Decentralized-Pictures/dcp-migrations" target="_blank">github.com/Decentralized-Pictures/dcp-migrations</a>
-                    </div>
+                    <!-- Alert with repository information removed -->
                 </div>
             </div>
         </section>
