Reduce spacing between intro text and status card

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
 
     <!-- Introduction section that explains the purpose of the dashboard -->
-    <div class="bg-light py-4 mb-4">
+    <div class="bg-light py-4 mb-2">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -130,15 +130,7 @@
         </div>
     </div>
 
-    <div class="container mt-4">
-        <section id="dashboard" class="mb-5">
-            <div class="row">
-                <div class="col-12">
-                    <!-- Alert with repository information removed -->
-                </div>
-            </div>
-        </section>
-
+    <div class="container">
         <section id="test-accounts" class="mb-5">
             <div class="card">
                 <div class="card-header bg-light">
