Add Locked Balance column to DCP users pre-migration status table

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                                     <th>Authentication</th>
                                     <th>Wallet Balance</th>
                                     <th>App Balance</th>
+                                    <th>Locked Balance</th>
                                     <th>Reputation</th>
                                     <th>Moderator</th>
                                     <th>NFT</th>
@@ -159,6 +160,7 @@
                                     <td><span class="badge bg-info">Google Auth</span></td>
                                     <td>55.88</td>
                                     <td>684.61</td>
+                                    <td>0</td>
                                     <td>40.4</td>
                                     <td><span class="text-success">Yes</span></td>
                                     <td>1</td>
@@ -171,6 +173,7 @@
                                     <td>0.98</td>
                                     <td>6.06</td>
                                     <td>0</td>
+                                    <td>0</td>
                                     <td><span class="text-danger">No</span></td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -182,6 +185,7 @@
                                     <td>1.37</td>
                                     <td>1</td>
                                     <td>0</td>
+                                    <td>0</td>
                                     <td><span class="text-danger">No</span></td>
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
@@ -192,6 +196,7 @@
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
                                     <td>3080.69</td>
                                     <td>194.9</td>
+                                    <td>0</td>
                                     <td>0</td>
                                     <td><span class="text-danger">No</span></td>
                                     <td>0</td>
