Add Locked Balance column to EVM Ledger Contract Verification table

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                                             <th>Assigned EVM address</th>
                                             <th>Contract Balance</th>
                                             <th>External Balance</th>
+                                            <th>Locked Balance</th>
                                             <th>Contract Reputation</th>
                                             <th>NFT</th>
                                             <th>Status</th>
@@ -254,6 +255,7 @@
                                             <td><code class="small">0x476bB9fADF338B7cB58D9775ab6E635faA042B47</code></td>
                                             <td>686.26 TALNT</td>
                                             <td>55.88 TALNT</td>
+                                            <td>0 TALNT</td>
                                             <td>40.45</td>
                                             <td>1</td>
                                             <td><span class="badge bg-success">Verified</span></td>
@@ -263,6 +265,7 @@
                                             <td><code class="small">0x3cb71e6Cacc83cb41FF3Ac7f45f4E5FF849891D3</code></td>
                                             <td>6.06 TALNT</td>
                                             <td>0.98 TALNT</td>
+                                            <td>0 TALNT</td>
                                             <td>0</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
@@ -272,6 +275,7 @@
                                             <td><code class="small">0x59fbc3f8c13E5199482Fe2142d713aC3D11a30Ed</code></td>
                                             <td>1.00 TALNT</td>
                                             <td>1.37 TALNT</td>
+                                            <td>0 TALNT</td>
                                             <td>0</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
@@ -281,6 +285,7 @@
                                             <td><code class="small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</code></td>
                                             <td>194.90 TALNT</td>
                                             <td>3080.89 TALNT</td>
+                                            <td>0 TALNT</td>
                                             <td>0</td>
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
