--- a/index.html
+++ b/index.html
@@ -202,6 +202,30 @@
                                     <td>0</td>
                                     <td><span class="badge bg-secondary">Not Complete</span></td>
                                 </tr>
+                                <tr id="account-sandra">
+                                    <td>Sandra Blockchain</td>
+                                    <td><span class="text-monospace small">tz1MK7JeYGK4YPwns9KvAG9erLwLxBXBwLh8</span></td>
+                                    <td><span class="badge bg-warning">FIL Wallet</span></td>
+                                    <td>120.45</td>
+                                    <td>350.75</td>
+                                    <td>100</td>
+                                    <td>750</td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td>3</td>
+                                    <td><span class="badge bg-secondary">Not Complete</span></td>
+                                </tr>
+                                <tr id="account-new-user" class="table-secondary">
+                                    <td>New User</td>
+                                    <td><span class="text-monospace small">N/A</span></td>
+                                    <td><span class="badge bg-dark">None</span></td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                    <td>0</td>
+                                    <td><span class="text-danger">No</span></td>
+                                    <td>0</td>
+                                    <td><span class="badge bg-danger">Not Migrated</span></td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -280,17 +304,7 @@
                                             <td>0</td>
                                             <td><span class="badge bg-success">Verified</span></td>
                                         </tr>
-                                        <tr>
-                                            <td>Keith Fellini</td>
-                                            <td><code class="small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</code></td>
-                                            <td>194.90 TALNT</td>
-                                            <td>3080.89 TALNT</td>
-                                            <td>0 TALNT</td>
-                                            <td>0</td>
-                                            <td>0</td>
-                                            <td><span class="badge bg-success">Verified</span></td>
-                                        </tr>
-                                    </tbody>
+                                                                                <tr>                                            <td>Keith Fellini</td>                                            <td><code class="small">0x95d8eee141DFf4961233B12e140b771f798fEBeB</code></td>                                            <td>194.90 TALNT</td>                                            <td>3080.89 TALNT</td>                                            <td>0 TALNT</td>                                            <td>0</td>                                            <td>0</td>                                            <td><span class="badge bg-success">Verified</span></td>                                        </tr>                                        <tr>                                            <td>Sandra Blockchain</td>                                            <td><code class="small">0x8B3d70d628Ebd30D4A2ea82DB95bA2B9F68AE814</code></td>                                            <td>350.75 TALNT</td>                                            <td>120.45 TALNT</td>                                            <td>100 TALNT</td>                                            <td>750</td>                                            <td>3</td>                                            <td><span class="badge bg-success">Verified</span></td>                                        </tr>                                        <tr>                                            <td>New User</td>                                            <td><code class="small">N/A</code></td>                                            <td>0 TALNT</td>                                            <td>0 TALNT</td>                                            <td>0 TALNT</td>                                            <td>0</td>                                            <td>0</td>                                            <td><span class="badge bg-dark">Not Applicable</span></td>                                        </tr>                                    </tbody>
                                 </table>
                             </div>
                             <div class="alert alert-info mt-3 mb-0">
