--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                                 </tr>
                                 <tr id="account-sandra">
                                     <td>Sandra Blockchain</td>
-                                    <td><span class="text-monospace small">tz1MK7JeYGK4YPwns9KvAG9erLwLxBXBwLh8</span></td>
-                                    <td><span class="badge bg-warning">FIL Wallet</span></td>
+                                    <td><span class="text-monospace small">tz1e42w8ZaGAbM3gucbBy8iRypdbnqUj7oWY</span></td>
+                                    <td><span class="badge bg-warning">FIL Wallet (Ledger Nano S)</span></td>
                                     <td>120.45</td>
                                     <td>350.75</td>
                                     <td>100</td>
