update snadra blokchain

--- a/characters.html
+++ b/characters.html
@@ -255,9 +255,7 @@
                                 <p><strong>Phone:</strong> 778-555-2134 (VOIP)</p>
                                 <p><strong>Email:</strong> sandra.blockchain@filmcredits.io</p>
                                 <p><strong>Auth:</strong> Sentinel Wallet (Ledger Nano S)</p>
-                                <p><strong>Internal Balance:</strong> 350.75</p>
-                                <p><strong>Film Ledger Balance:</strong> 5 <small>(bitmap)</small></p>
-                                <p><strong>External Balance:</strong> 120.45</p>
+                                                                <p><strong>Internal Balance:</strong> 5</p>                                <p><strong>External Balance:</strong> 184.976081 ꜩ</p>
                                 <p><strong>Reputation:</strong> 0</p>
                                 <p><strong>NFT:</strong> <span class="text-success">3</span> <i class="bi bi-images text-success"></i></p>
                             </div>
@@ -436,8 +434,7 @@
                                         <td>Sandra Blockchain</td>
                                         <td><code>tz1e42w8ZaGAbM3gucbBy8iRypdbnqUj7oWY</code></td>
                                         <td><code>0x8B3d70d628Ebd30D4A2ea82DB95bA2B9F68AE814</code></td>
-                                        <td>476.20</td>
-                                        <td>3 NFTs, 0 reputation, Sentinel wallet (Ledger Nano S), 5 TALNT bitmap</td>
+                                                                                <td>289.976081</td>                                        <td>3 NFTs, 0 reputation, Sentinel wallet (Ledger Nano S)</td>
                                     </tr>
                                     <tr class="table-danger">
                                         <td>New User</td>
