--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="characters.html">Characters</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="wallet-compatibility.html">Wallet Compatibility</a>
+                    </li>
                 </ul>
             </div>
         </div>
