Add User Guide Analysis page with role-by-role cross-check analysis

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="wallet-compatibility.html">Wallet Compatibility</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="user-guide-analysis.html">User Guide Analysis</a>
+                    </li>
                 </ul>
             </div>
         </div>
